--- a/Level 2/index.html
+++ b/Level 2/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>BioGame: Amino Acid Sequencing</title>
+    <title>BioGame: Guess the Amino Acid</title>
 </head>
 <body>
     <div id="game-container">
-        <h1>BioGame: Amino Acid Sequencing</h1>
-        <div id="amino-acids"></div>
-        <div id="protein-sequence"></div>
-        <button id="check-sequence-btn">Check Sequence</button>
+        <h1>BioGame: Guess the Amino Acid</h1>
+        <div id="amino-acid-image"></div>
+        <input type="text" id="guess-input" placeholder="Enter your guess">
+        <button id="check-guess-btn">Check Guess</button>
         <p id="result"></p>
     </div>
     <script src="script.js"></script>
