--- a/1.html
+++ b/1.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+	<!-- Created by Sastha Kumar N -->
+<!-- GitHub Repo: https://github.com/Sastha-Kumar-N -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +11,13 @@
 <body>
 <header>
     <div class="logo">
-    <a href="../../index.html" target="_parent"><img src="../../BGDB-index-files/Logo/bgdb simple white bg.png" alt="Logo"></a> </div>
+    <a href="https://bharatgenomedatabase.org/tool/Game/1.html" target="_parent"><img src="../../BGDB-index-files/Logo/bgdb simple white bg.png" alt="Logo"></a> </div>
     <h1 align="center">BHARAT GENOME DATABASE</h1>
     <nav>
       <ul>
-        <li><a href="../../index.html">Home</a></li>
-		  <li><a href="../../Research-portal/index.html">Research Portal</li>
-        <li><a href="../../About-Us/about.html">About Us</a></li>
+        <li><a href="https://bharatgenomedatabase.org">Home</a></li>
+		  <li><a href="https://bharatgenomedatabase.org/Research-portal/index.html">Research Portal</li>
+        <li><a href="https://bharatgenomedatabase.org/About-Us/about.html">About Us</a></li>
         
         <li><a href="https://bharatgenomedatabase.org/bgdb/node/1">Contact</a></li>
       </ul>
